Added 3D/Animation skills section with React Three Fiber and Framer Motion

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <span>TypeScript</span>
                         <span>MongoDB</span>
                     </div>
-                    <a href="#" class="btn primary-btn download-btn">
+                    <a href="https://drive.google.com/file/d/1Rg_1SflBRBVjAq5fBK2CxVoV1lrYBHCc/view?usp=drive_link"  target="_blank"class="btn primary-btn download-btn">
                         <i class="fas fa-download"></i>
                         <span>Download CV</span>
                     </a>
@@ -226,6 +226,54 @@
                         <div class="project-links">
                             <a href="#" target="_blank" class="btn small-btn primary-btn">Live Demo</a>
                             <a href="#" target="_blank" class="btn small-btn secondary-btn">Source Code</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card" data-category="web">
+                    <div class="project-image">
+                        <img src="img/plant-shop.jpg" alt="Plant Shop Landing Page">
+                        <div class="project-overlay">
+                            <div class="overlay-content">
+                                <h3>Plant Shop Landing Page</h3>
+                                <p>A modern, responsive landing page for a plant shop with beautiful UI and smooth animations.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <h3>Plant Shop Landing Page</h3>
+                        <p>A modern, responsive landing page for a plant shop with beautiful UI and smooth animations.</p>
+                        <div class="project-tech">
+                            <span>HTML5</span>
+                            <span>CSS3</span>
+                            <span>JavaScript</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://plant-shop-landing-page.netlify.app/" target="_blank" class="btn small-btn primary-btn">Live Demo</a>
+                            <a href="https://github.com/Shahorior1/plant-shop-landing-page" target="_blank" class="btn small-btn secondary-btn">Source Code</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card" data-category="web">
+                    <div class="project-image">
+                        <img src="img/proxy-bdix.jpg" alt="Proxy BDIX">
+                        <div class="project-overlay">
+                            <div class="overlay-content">
+                                <h3>Proxy BDIX</h3>
+                                <p>A network proxy solution providing optimized connectivity for BDIX (Bangladesh Internet Exchange) users.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <h3>Proxy BDIX</h3>
+                        <p>A network proxy solution providing optimized connectivity for BDIX (Bangladesh Internet Exchange) users with improved speeds and access to local content.</p>
+                        <div class="project-tech">
+                            <span>Node.js</span>
+                            <span>Networking</span>
+                            <span>Express</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://proxy-bdix.netlify.app/" target="_blank" class="btn small-btn primary-btn">Live Demo</a>
+                            <a href="https://github.com/Shahorior1/proxy-bdix" target="_blank" class="btn small-btn secondary-btn">Source Code</a>
                         </div>
                     </div>
                 </div>
@@ -324,6 +372,35 @@
                             <span data-percent="85%">RESTful APIs</span>
                             <div class="progress-bar">
                                 <div class="progress" style="width: 85%"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-category">
+                    <h3>3D / Animation</h3>
+                    <div class="skill-list">
+                        <div class="skill-item">
+                            <span data-percent="85%">React Three Fiber</span>
+                            <div class="progress-bar">
+                                <div class="progress" style="width: 85%"></div>
+                            </div>
+                        </div>
+                        <div class="skill-item">
+                            <span data-percent="80%">Framer Motion</span>
+                            <div class="progress-bar">
+                                <div class="progress" style="width: 80%"></div>
+                            </div>
+                        </div>
+                        <div class="skill-item">
+                            <span data-percent="75%">Three.js</span>
+                            <div class="progress-bar">
+                                <div class="progress" style="width: 75%"></div>
+                            </div>
+                        </div>
+                        <div class="skill-item">
+                            <span data-percent="70%">GSAP</span>
+                            <div class="progress-bar">
+                                <div class="progress" style="width: 70%"></div>
                             </div>
                         </div>
                     </div>
