--- a/index.html
+++ b/index.html
@@ -420,15 +420,15 @@
                 <div class="contact-info">
                     <div class="contact-item">
                         <i class="fas fa-envelope"></i>
-                        <p>email@example.com</p>
+                        <p>sadikshahorioremon@gmail.com</p>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
-                        <p>+123 456 7890</p>
+                        <p>+8801826304852</p>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
-                        <p>City, Country</p>
+                        <p>Dhaka, Bangladesh</p>
                     </div>
                     <div class="social-links">
                         <a href="#" target="_blank" data-tooltip="GitHub"><i class="fab fa-github"></i></a>
